landing page alignment fixed

--- a/backend/localLearnLive/style.css
+++ b/backend/localLearnLive/style.css
@@ -571,26 +571,28 @@
 }
 
 #bot_desp-btn {
-  text-decoration: none;
-  font-size: 1.5rem;
-  display: flex;
-  align-items: center;
-  align-self: flex-start;
-  height: 3.75rem;
-  width: 18.75rem;
-  text-align: left;
+  width: 45%;
+  height: 3rem;
   border: 3px solid #40e0d0;
-  border-radius: 10px;
   color: #40e0d0;
-  padding: 1rem;
-  margin: 2rem;
-  margin-left: 0;
+  border-radius: 10px;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 2rem;
+  text-align: left;
+  padding: 0.5rem;
   background-color: white;
+  margin: 1.5rem 0;
 }
 
 .linksignup {
   text-decoration: none;
   color: #40e0d0;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .bot-msg__screenshot-conatiner {
@@ -676,13 +678,15 @@
 .footer-text {
   font-size: 1.5rem;
   text-decoration: none;
-  text-align: center;
+  text-align: left;
 }
 
 .social-media_links-container {
   width: 65%;
   display: flex;
   flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .some_text-list {
@@ -696,7 +700,7 @@
   margin: 1rem;
   width: 60%;
   height: max-content;
-  margin: auto;
+  margin: 1rem 0;
   flex-wrap: wrap;
 }
 
@@ -713,7 +717,7 @@
   display: flex;
   justify-content: space-between;
   width: 60%;
-  margin: 1rem auto;
+  margin: 1rem 0;
 }
 
 #sm-link:hover {
